[gd_scene load_steps=7 format=2]

[ext_resource path="res://tiles_packed.png" type="Texture" id=1]
[ext_resource path="res://Spikes.gd" type="Script" id=2]

[sub_resource type="PhysicsMaterial" id=3]

[sub_resource type="AtlasTexture" id=1]
flags = 1
atlas = ExtResource( 1 )
region = Rect2( 144, 54, 18, 18 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 7.5, 3.75 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 9, 4.5 )

[node name="Spikes" type="StaticBody2D" groups=["Traps"]]
scale = Vector2( 4, 4 )
collision_layer = 2
collision_mask = 0
physics_material_override = SubResource( 3 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 9, 9 )
texture = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 9, 14.25 )
shape = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 9, 9 )
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, 4.5 )
shape = SubResource( 4 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered" flags=3]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
